# vlm-analysis-dashboard

./: .gitignore  README.md
data/: constants.py  main.py  pyproject.toml
data/runs/: SmolV2VideoAnalyzer_video_results.json  SmolVideoAnalyzer_13_frames_results.json  SmolVideoAnalyzer_1_frames_results.json  SmolVideoAnalyzer_5_frames_results.json
