[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-dashboard"
version = "0.1.0"
description = "Dashboard em Streamlit para análise de performance de VLMs"
authors = [
  { name="Seu Nome", email="seuemail@example.com" }
]
    dependencies = [
      "streamlit==1.49.1",
      "pandas==2.3.2",
      "plotly==6.3.0"
    ]

[tool.streamlit]
# Configurações opcionais
server.headless = true